Begin to group endpoints in groups

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -10,13 +10,16 @@
     "from pathlib import Path\n",
     "import pickle\n",
     "\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
     "from typing import Any\n",
+    "from scipy import ndimage\n",
     "from topostats.io import LoadScans\n",
     "from topostats.plottingfuncs import Colormap\n",
     "from topostats.utils import convolve_skeleton\n",
     "from topostats.mask_manipulation import smooth_mask\n",
     "from topostats.tracing.skeletonize import getSkeleton\n",
-    "from topostats.measure.geometry import calculate_mask_width_with_skeleton\n",
+    "from topostats.measure.geometry import calculate_mask_width_with_skeleton, calculate_pixel_path_distance\n",
     "\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
@@ -30,6 +33,7 @@
     "\n",
     "def clear_output():\n",
     "    from IPython.display import clear_output as co\n",
+    "\n",
     "    co()\n",
     "\n",
     "\n",
@@ -88,7 +92,71 @@
     "        else:\n",
     "            print(f\"excluding pair {endpoint_1}, {endpoint_2} due to repeated endpoints\")\n",
     "\n",
-    "    return pairs_no_repeated_ends"
+    "    return pairs_no_repeated_ends\n",
+    "\n",
+    "\n",
+    "def connect_endpoints_with_best_path(\n",
+    "    image: npt.NDArray[np.float32],\n",
+    "    mask: npt.NDArray[np.bool_],\n",
+    "    p2nm: float,\n",
+    "    endpoint_1: tuple[int, int],\n",
+    "    endpoint_2: tuple[int, int],\n",
+    "    endpoint_connection_cost_map_height_maximum: float,\n",
+    ") -> tuple[npt.NDArray[np.uint8], float, float]:\n",
+    "    # create a weight cost map from the image, where 0 is the maximum cost, and the lowest cost is configurable.\n",
+    "    # first create a crop around the two endpoints to speed up pathfinding\n",
+    "    cost_map_bbox_padding_px = 10\n",
+    "    min_y = max(0, min(endpoint_1[0], endpoint_2[0]) - cost_map_bbox_padding_px)\n",
+    "    max_y = min(image.shape[0], max(endpoint_1[0], endpoint_2[0]) + cost_map_bbox_padding_px)\n",
+    "    min_x = max(0, min(endpoint_1[1], endpoint_2[1]) - cost_map_bbox_padding_px)\n",
+    "    max_x = min(image.shape[1], max(endpoint_1[1], endpoint_2[1]) + cost_map_bbox_padding_px)\n",
+    "    cost_map = image[min_y:max_y, min_x:max_x]\n",
+    "    mask_crop = mask[min_y:max_y, min_x:max_x]\n",
+    "    image_crop = image[min_y:max_y, min_x:max_x]\n",
+    "    local_endpoint_1 = (endpoint_1[0] - min_y, endpoint_1[1] - min_x)\n",
+    "    local_endpoint_2 = (endpoint_2[0] - min_y, endpoint_2[1] - min_x)\n",
+    "    # clip it to the height bounds\n",
+    "    cost_map = np.clip(\n",
+    "        cost_map,\n",
+    "        a_min=0,\n",
+    "        a_max=endpoint_connection_cost_map_height_maximum,\n",
+    "    )\n",
+    "    # invert it\n",
+    "    cost_map = endpoint_connection_cost_map_height_maximum - cost_map\n",
+    "    # normalise to 0-1\n",
+    "    cost_map = cost_map / endpoint_connection_cost_map_height_maximum\n",
+    "\n",
+    "    # find the lowest cost path between the two endpoints\n",
+    "    from skimage.graph import route_through_array\n",
+    "\n",
+    "    path, cost = route_through_array(\n",
+    "        cost_map,\n",
+    "        start=local_endpoint_1,\n",
+    "        end=local_endpoint_2,\n",
+    "        fully_connected=True,  # allow diagonal moves\n",
+    "    )\n",
+    "\n",
+    "    # Convert the path back to the original image coordinates\n",
+    "    path = [(y + min_y, x + min_x) for y, x in path]\n",
+    "    # Convert to numpy array for easier indexing\n",
+    "    path = np.array(path)\n",
+    "\n",
+    "    # Calculate the distance of the path in nm, taking into account diagnonal distances\n",
+    "    path_distance_nm = calculate_pixel_path_distance(path) * p2nm\n",
+    "\n",
+    "    return path, cost, path_distance_nm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7683567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Endpoint(BaseModel):\n",
+    "    id: int\n",
+    "    position: tuple[int, int]"
    ]
   },
   {
@@ -105,6 +173,7 @@
     "skeletonisation_height_bias = 0.6\n",
     "endpoint_connection_distance_nm = 10\n",
     "endpoint_connection_cost_map_height_maximum = 3.0\n",
+    "endpoint_hard_connection_distance_nm = 20.0\n",
     "\n",
     "\n",
     "for filename, file_data in loaded_files.items():\n",
@@ -192,81 +261,116 @@
     "    for pair in potential_pairs:\n",
     "        print(pair)\n",
     "\n",
-    "    # for now, for simplicity, let's delete any pairs that are involved in other pairs.\n",
-    "    # Construct a list of all endpoints involved in pairs\n",
-    "    potential_pairs_no_repeated_endpoints = keep_only_nonrepeated_endpoints(potential_pairs)\n",
-    "    print(\"pairs to connect:\")\n",
-    "    for pair in potential_pairs_no_repeated_endpoints:\n",
-    "        print(pair)\n",
+    "    # Get the groups of potentially connected endpoints, so we group any endpoint that has connections to others,\n",
+    "    # including indirectly through others.\n",
+    "    groups_of_potentially_connected_endpoint_pairs: list[list[list[tuple[int, int], tuple[int, int], float]]] = []\n",
+    "    # For each potential pair, see if they connect to any existing group\n",
+    "    for potential_pair in potential_pairs:\n",
+    "        endpoint_1, endpoint_2, distance_nm = potential_pair\n",
+    "        # See if either endpoint is already in a group\n",
+    "        group_found = False\n",
+    "        for group in groups_of_potentially_connected_endpoint_pairs:\n",
+    "            for group_pair in group:\n",
+    "                group_endpoint_1, group_endpoint_2, _ = group_pair\n",
+    "                # Check if either endpoint matches either endpoint in the group pair\n",
+    "                if (\n",
+    "                    (endpoint_1[0] == group_endpoint_1[0] and endpoint_1[1] == group_endpoint_1[1])\n",
+    "                    or (endpoint_1[0] == group_endpoint_2[0] and endpoint_1[1] == group_endpoint_2[1])\n",
+    "                    or (endpoint_2[0] == group_endpoint_1[0] and endpoint_2[1] == group_endpoint_1[1])\n",
+    "                    or (endpoint_2[0] == group_endpoint_2[0] and endpoint_2[1] == group_endpoint_2[1])\n",
+    "                ):\n",
+    "                    # It connects, add to this group\n",
+    "                    group.append(potential_pair)\n",
+    "                    group_found = True\n",
+    "                    break\n",
+    "            if group_found:\n",
+    "                break\n",
+    "        if not group_found:\n",
+    "            # Create a new group\n",
+    "            groups_of_potentially_connected_endpoint_pairs.append([potential_pair])\n",
     "\n",
-    "    for pair in potential_pairs_no_repeated_endpoints:\n",
-    "        endpoint_1, endpoint_2, distance_nm = pair\n",
+    "    print(\"groups of potentially connected endpoint pairs:\")\n",
+    "    for group in groups_of_potentially_connected_endpoint_pairs:\n",
+    "        print(\"group:\")\n",
+    "        for pair in group:\n",
+    "            print(pair)\n",
     "\n",
-    "        # Connect the pair.\n",
+    "    # Now consider each group and decide how to connect them.\n",
+    "    # Iterate over each possible pair\n",
+    "    for group_index, group_of_pairs in enumerate(groups_of_potentially_connected_endpoint_pairs):\n",
+    "        print(f\"processing group {group_index} of {len(groups_of_potentially_connected_endpoint_pairs)}\")\n",
     "\n",
-    "        # try using height biased pathfinding between the two endpoints?\n",
-    "        # create a weight cost map from the image, where 0 is the maximum cost, and the lowest cost is configurable.\n",
-    "        # first create a crop around the two endpoints to speed up pathfinding\n",
-    "        cost_map_bbox_padding_px = 10\n",
-    "        min_y = max(0, min(endpoint_1[0], endpoint_2[0]) - cost_map_bbox_padding_px)\n",
-    "        max_y = min(image.shape[0], max(endpoint_1[0], endpoint_2[0]) + cost_map_bbox_padding_px)\n",
-    "        min_x = max(0, min(endpoint_1[1], endpoint_2[1]) - cost_map_bbox_padding_px)\n",
-    "        max_x = min(image.shape[1], max(endpoint_1[1], endpoint_2[1]) + cost_map_bbox_padding_px)\n",
-    "        cost_map = image[min_y:max_y, min_x:max_x]\n",
-    "        mask_crop = mask[min_y:max_y, min_x:max_x]\n",
-    "        image_crop = image[min_y:max_y, min_x:max_x]\n",
-    "        local_endpoint_1 = (endpoint_1[0] - min_y, endpoint_1[1] - min_x)\n",
-    "        local_endpoint_2 = (endpoint_2[0] - min_y, endpoint_2[1] - min_x)\n",
-    "        # clip it to the height bounds\n",
-    "        cost_map = np.clip(\n",
-    "            cost_map,\n",
-    "            a_min=0,\n",
-    "            a_max=endpoint_connection_cost_map_height_maximum,\n",
-    "        )\n",
-    "        # invert it\n",
-    "        cost_map = endpoint_connection_cost_map_height_maximum - cost_map\n",
-    "        # normalise to 0-1\n",
-    "        cost_map = cost_map / endpoint_connection_cost_map_height_maximum\n",
+    "        # If there is only one pair in the group, just connect it.\n",
+    "        if len(group_of_pairs) == 1:\n",
+    "            pair = group_of_pairs[0]\n",
+    "            endpoint_1, endpoint_2, distance_nm = pair\n",
     "\n",
-    "        # find the lowest cost path between the two endpoints\n",
-    "        from skimage.graph import route_through_array\n",
+    "            path, cost, distance_nm = connect_endpoints_with_best_path(\n",
+    "                image=image,\n",
+    "                mask=mask,\n",
+    "                p2nm=p2nm,\n",
+    "                endpoint_1=(endpoint_1[0], endpoint_1[1]),\n",
+    "                endpoint_2=(endpoint_2[0], endpoint_2[1]),\n",
+    "                endpoint_connection_cost_map_height_maximum=endpoint_connection_cost_map_height_maximum,\n",
+    "            )\n",
     "\n",
-    "        path, cost = route_through_array(\n",
-    "            cost_map,\n",
-    "            start=local_endpoint_1,\n",
-    "            end=local_endpoint_2,\n",
-    "            fully_connected=True,  # allow diagonal moves\n",
-    "        )\n",
+    "            path_mask = np.zeros_like(mask, dtype=bool)\n",
+    "            # Set the path to True\n",
+    "            for y, x in path:\n",
+    "                path_mask[y, x] = True\n",
+    "            # Calculate the dilation iterations needed to reach the mean mask width\n",
+    "            dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
+    "            dilated_path_array = ndimage.binary_dilation(\n",
+    "                path_mask,\n",
+    "                iterations=dilation_radius,\n",
+    "            )\n",
     "\n",
-    "        # Dilate the path to equal the mean mask width in pixels\n",
-    "        from scipy import ndimage\n",
-    "        path_array = np.zeros_like(cost_map, dtype=bool)\n",
-    "        # Set the path to True\n",
-    "        for y, x in path:\n",
-    "            path_array[y, x] = True\n",
-    "        # Calculate the dilation iterations needed to reach the mean mask width\n",
-    "        dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
-    "        dilated_path_array = ndimage.binary_dilation(\n",
-    "            path_array,\n",
-    "            iterations=dilation_radius,\n",
-    "        )\n",
+    "            # Add the dilated path to the whole mask\n",
+    "            mask = mask | dilated_path_array\n",
     "\n",
-    "        # Add the dilated path to the whole mask\n",
-    "        dilated_path_array_global = np.zeros_like(mask, dtype=bool)\n",
-    "        dilated_path_array_global[min_y:max_y, min_x:max_x] = dilated_path_array\n",
-    "        mask = mask | dilated_path_array_global\n",
+    "            # Update the skeleton to include the path\n",
+    "            for y, x in path:\n",
+    "                skeleton[y, x] = True\n",
     "\n",
-    "        for y, x in path:\n",
-    "            skeleton[y + min_y, x + min_x] = True\n",
+    "            continue  # move to next group\n",
     "\n",
-    "    fig, ax = plt.subplots(figsize=(20, 20))\n",
-    "    plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "    grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
-    "    plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
-    "    skeleton_mask = np.ma.masked_where(~skeleton.astype(bool), skeleton)\n",
-    "    plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
-    "    plt.title(\"skeleton after connecting loose ends\")\n",
-    "    plt.show()"
+    "        # For groups with multiple pairs, we need to find a way to connect all endpoints together.\n",
+    "\n",
+    "        # find the hard-connected endpoints in this group, defined as the endpoints that are connected via the\n",
+    "        # skeleton already, within a configurable hard connection distance.\n",
+    "        endpoint_hard_connection_distance_px = int(endpoint_hard_connection_distance_nm / p2nm)\n",
+    "        # store as a set of frozensets to avoid double counting\n",
+    "        # using sets since the order of the endpoints doesn't matter and we want to avoid duplicates\n",
+    "        endpoint_hard_connections: set[frozenset] = set()\n",
+    "        # Iterate over every endpoint in the group\n",
+    "\n",
+    "\n",
+    "    #     path_mask = np.zeros_like(mask, dtype=bool)\n",
+    "    #     # Set the path to True\n",
+    "    #     for y, x in path:\n",
+    "    #         path_mask[y, x] = True\n",
+    "    #     # Calculate the dilation iterations needed to reach the mean mask width\n",
+    "    #     dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
+    "    #     dilated_path_array = ndimage.binary_dilation(\n",
+    "    #         path_mask,\n",
+    "    #         iterations=dilation_radius,\n",
+    "    #     )\n",
+    "\n",
+    "    #     # Add the dilated path to the whole mask\n",
+    "    #     mask = mask | dilated_path_array\n",
+    "\n",
+    "    #     # Update the skeleton to include the path\n",
+    "    #     for y, x in path:\n",
+    "    #         skeleton[y, x] = True\n",
+    "\n",
+    "    # fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "    # plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "    # grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
+    "    # plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
+    "    # skeleton_mask = np.ma.masked_where(~skeleton.astype(bool), skeleton)\n",
+    "    # plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
+    "    # plt.title(\"skeleton after connecting loose ends\")\n",
+    "    # plt.show()"
    ]
   }
  ],
