Use networkx to group nearby endpoint groups

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -14,6 +14,7 @@
     "\n",
     "from typing import Any\n",
     "from scipy import ndimage\n",
+    "import networkx as nx\n",
     "from topostats.io import LoadScans\n",
     "from topostats.plottingfuncs import Colormap\n",
     "from topostats.utils import convolve_skeleton\n",
@@ -60,6 +61,25 @@
     "        loaded_file = pickle.load(f)\n",
     "        filename = loaded_file[\"filename\"]\n",
     "        loaded_files[filename] = loaded_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7683567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Endpoint(BaseModel):\n",
+    "    id: int\n",
+    "    position: tuple[int, int]\n",
+    "\n",
+    "\n",
+    "class ConnectionGroup(BaseModel):\n",
+    "    id: int\n",
+    "    endpoints: dict[int, Endpoint] = Field(default_factory=dict)\n",
+    "    hard_connected_endpoints: list[tuple[int, int]] = Field(default_factory=list)\n",
+    "    close_endpoint_pairs: list[tuple[int, int]] = Field(default_factory=list)"
    ]
   },
   {
@@ -144,19 +164,50 @@
     "    # Calculate the distance of the path in nm, taking into account diagnonal distances\n",
     "    path_distance_nm = calculate_pixel_path_distance(path) * p2nm\n",
     "\n",
-    "    return path, cost, path_distance_nm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7683567",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Endpoint(BaseModel):\n",
-    "    id: int\n",
-    "    position: tuple[int, int]"
+    "    return path, cost, path_distance_nm\n",
+    "\n",
+    "\n",
+    "def group_endpoints(\n",
+    "    endpoints: dict[int, Endpoint], close_pairs: list[int, int, float], draw_graph: bool = False\n",
+    ") -> dict[int, ConnectionGroup]:\n",
+    "    \"\"\"\n",
+    "    Group endpoints into connection groups based on interconnections.\n",
+    "    \"\"\"\n",
+    "    # Split the graph into connected groups\n",
+    "\n",
+    "    # Create a graph\n",
+    "    G = nx.Graph()\n",
+    "    # Add the nodes (endpoints) as endpoint IDs\n",
+    "    for endpoint_index, endpoint in endpoints.items():\n",
+    "        G.add_node(endpoint_index)\n",
+    "    # Add edges for each close pair (as endpoint IDs)\n",
+    "    for endpoint_1_index, endpoint_2_index, distance_nm in close_pairs:\n",
+    "        G.add_edge(endpoint_1_index, endpoint_2_index)\n",
+    "\n",
+    "    # draw it\n",
+    "    if draw_graph:\n",
+    "        nx.draw(G, with_labels=True)\n",
+    "        plt.show()\n",
+    "\n",
+    "    # Get networkx to find connected components\n",
+    "    connected_components = list(nx.connected_components(G))\n",
+    "    # Create ConnectionGroup objects for each connected component\n",
+    "    connection_groups: dict[int, ConnectionGroup] = {}\n",
+    "    for group_id, component in enumerate(connected_components):\n",
+    "        group_endpoints = {endpoint_index: endpoints[endpoint_index] for endpoint_index in component}\n",
+    "        # Get the close pairs that are within this component\n",
+    "        group_close_pairs = [\n",
+    "            (endpoint_1_index, endpoint_2_index)\n",
+    "            for endpoint_1_index, endpoint_2_index, _distance_nm in close_pairs\n",
+    "            if endpoint_1_index in component and endpoint_2_index in component\n",
+    "        ]\n",
+    "        connection_group = ConnectionGroup(\n",
+    "            id=group_id,\n",
+    "            endpoints=group_endpoints,\n",
+    "            close_endpoint_pairs=group_close_pairs,\n",
+    "        )\n",
+    "        connection_groups[group_id] = connection_group\n",
+    "    return connection_groups"
    ]
   },
   {
@@ -239,6 +290,12 @@
     "    print(\"endpoints:\")\n",
     "    print(endpoint_coords)\n",
     "\n",
+    "    # construct list of Endpoint objects\n",
+    "    endpoints: dict[int, Endpoint] = {}\n",
+    "    for endpoint_index, coord in enumerate(endpoint_coords):\n",
+    "        endpoint = Endpoint(id=endpoint_index, position=(coord[0], coord[1]))\n",
+    "        endpoints[endpoint_index] = endpoint\n",
+    "\n",
     "    fig, ax = plt.subplots(figsize=(20, 20))\n",
     "    plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "    grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
@@ -248,129 +305,91 @@
     "    plt.show()\n",
     "\n",
     "    # For each endpoint, determine if any others are close enough to connect.\n",
-    "    potential_pairs: list[list[list[int, int], list[int, int], float]] = []\n",
-    "    for i, endpoint_1 in enumerate(endpoint_coords):\n",
-    "        for j, endpoint_2 in enumerate(endpoint_coords):\n",
+    "    nearby_endpoint_pairs: list[tuple[int, int, float]] = []\n",
+    "    for i, endpoint_1 in endpoints.items():\n",
+    "        for j, endpoint_2 in endpoints.items():\n",
     "            if i >= j:\n",
     "                continue  # avoid double counting\n",
-    "            distance_nm = np.linalg.norm((endpoint_1 - endpoint_2) * p2nm)\n",
+    "            distance_nm = np.linalg.norm((np.array(endpoint_1.position) - np.array(endpoint_2.position)) * p2nm)\n",
     "            if distance_nm <= endpoint_connection_distance_nm:\n",
-    "                potential_pairs.append(((endpoint_1), (endpoint_2), distance_nm))\n",
+    "                nearby_endpoint_pairs.append((endpoint_1.id, endpoint_2.id, distance_nm))\n",
     "\n",
-    "    print(\"potential pairs to connect:\")\n",
-    "    for pair in potential_pairs:\n",
-    "        print(pair)\n",
+    "    # Group nearby endpoint pairs into connection groups\n",
+    "    connection_groups = group_endpoints(endpoints=endpoints, close_pairs=nearby_endpoint_pairs)\n",
+    "    print(f\"connection groups:\")\n",
+    "    print(connection_groups)\n",
     "\n",
-    "    # Get the groups of potentially connected endpoints, so we group any endpoint that has connections to others,\n",
-    "    # including indirectly through others.\n",
-    "    groups_of_potentially_connected_endpoint_pairs: list[list[list[tuple[int, int], tuple[int, int], float]]] = []\n",
-    "    # For each potential pair, see if they connect to any existing group\n",
-    "    for potential_pair in potential_pairs:\n",
-    "        endpoint_1, endpoint_2, distance_nm = potential_pair\n",
-    "        # See if either endpoint is already in a group\n",
-    "        group_found = False\n",
-    "        for group in groups_of_potentially_connected_endpoint_pairs:\n",
-    "            for group_pair in group:\n",
-    "                group_endpoint_1, group_endpoint_2, _ = group_pair\n",
-    "                # Check if either endpoint matches either endpoint in the group pair\n",
-    "                if (\n",
-    "                    (endpoint_1[0] == group_endpoint_1[0] and endpoint_1[1] == group_endpoint_1[1])\n",
-    "                    or (endpoint_1[0] == group_endpoint_2[0] and endpoint_1[1] == group_endpoint_2[1])\n",
-    "                    or (endpoint_2[0] == group_endpoint_1[0] and endpoint_2[1] == group_endpoint_1[1])\n",
-    "                    or (endpoint_2[0] == group_endpoint_2[0] and endpoint_2[1] == group_endpoint_2[1])\n",
-    "                ):\n",
-    "                    # It connects, add to this group\n",
-    "                    group.append(potential_pair)\n",
-    "                    group_found = True\n",
-    "                    break\n",
-    "            if group_found:\n",
-    "                break\n",
-    "        if not group_found:\n",
-    "            # Create a new group\n",
-    "            groups_of_potentially_connected_endpoint_pairs.append([potential_pair])\n",
+    "    # # Now consider each group and decide how to connect them.\n",
+    "    # # Iterate over each possible pair\n",
+    "    # for group_index, group_of_pairs in enumerate(groups_of_potentially_connected_endpoint_pairs):\n",
+    "    #     print(f\"processing group {group_index} of {len(groups_of_potentially_connected_endpoint_pairs)}\")\n",
     "\n",
-    "    print(\"groups of potentially connected endpoint pairs:\")\n",
-    "    for group in groups_of_potentially_connected_endpoint_pairs:\n",
-    "        print(\"group:\")\n",
-    "        for pair in group:\n",
-    "            print(pair)\n",
+    "    #     # If there is only one pair in the group, just connect it.\n",
+    "    #     if len(group_of_pairs) == 1:\n",
+    "    #         pair = group_of_pairs[0]\n",
+    "    #         endpoint_1, endpoint_2, distance_nm = pair\n",
     "\n",
-    "    # Now consider each group and decide how to connect them.\n",
-    "    # Iterate over each possible pair\n",
-    "    for group_index, group_of_pairs in enumerate(groups_of_potentially_connected_endpoint_pairs):\n",
-    "        print(f\"processing group {group_index} of {len(groups_of_potentially_connected_endpoint_pairs)}\")\n",
+    "    #         path, cost, distance_nm = connect_endpoints_with_best_path(\n",
+    "    #             image=image,\n",
+    "    #             mask=mask,\n",
+    "    #             p2nm=p2nm,\n",
+    "    #             endpoint_1=(endpoint_1[0], endpoint_1[1]),\n",
+    "    #             endpoint_2=(endpoint_2[0], endpoint_2[1]),\n",
+    "    #             endpoint_connection_cost_map_height_maximum=endpoint_connection_cost_map_height_maximum,\n",
+    "    #         )\n",
     "\n",
-    "        # If there is only one pair in the group, just connect it.\n",
-    "        if len(group_of_pairs) == 1:\n",
-    "            pair = group_of_pairs[0]\n",
-    "            endpoint_1, endpoint_2, distance_nm = pair\n",
+    "    #         path_mask = np.zeros_like(mask, dtype=bool)\n",
+    "    #         # Set the path to True\n",
+    "    #         for y, x in path:\n",
+    "    #             path_mask[y, x] = True\n",
+    "    #         # Calculate the dilation iterations needed to reach the mean mask width\n",
+    "    #         dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
+    "    #         dilated_path_array = ndimage.binary_dilation(\n",
+    "    #             path_mask,\n",
+    "    #             iterations=dilation_radius,\n",
+    "    #         )\n",
     "\n",
-    "            path, cost, distance_nm = connect_endpoints_with_best_path(\n",
-    "                image=image,\n",
-    "                mask=mask,\n",
-    "                p2nm=p2nm,\n",
-    "                endpoint_1=(endpoint_1[0], endpoint_1[1]),\n",
-    "                endpoint_2=(endpoint_2[0], endpoint_2[1]),\n",
-    "                endpoint_connection_cost_map_height_maximum=endpoint_connection_cost_map_height_maximum,\n",
-    "            )\n",
+    "    #         # Add the dilated path to the whole mask\n",
+    "    #         mask = mask | dilated_path_array\n",
     "\n",
-    "            path_mask = np.zeros_like(mask, dtype=bool)\n",
-    "            # Set the path to True\n",
-    "            for y, x in path:\n",
-    "                path_mask[y, x] = True\n",
-    "            # Calculate the dilation iterations needed to reach the mean mask width\n",
-    "            dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
-    "            dilated_path_array = ndimage.binary_dilation(\n",
-    "                path_mask,\n",
-    "                iterations=dilation_radius,\n",
-    "            )\n",
+    "    #         # Update the skeleton to include the path\n",
+    "    #         for y, x in path:\n",
+    "    #             skeleton[y, x] = True\n",
     "\n",
-    "            # Add the dilated path to the whole mask\n",
-    "            mask = mask | dilated_path_array\n",
+    "    #         continue  # move to next group\n",
     "\n",
-    "            # Update the skeleton to include the path\n",
-    "            for y, x in path:\n",
-    "                skeleton[y, x] = True\n",
+    "    #     # For groups with multiple pairs, we need to find a way to connect all endpoints together.\n",
     "\n",
-    "            continue  # move to next group\n",
+    "    #     # find the hard-connected endpoints in this group, defined as the endpoints that are connected via the\n",
+    "    #     # skeleton already, within a configurable hard connection distance.\n",
+    "    #     endpoint_hard_connection_distance_px = int(endpoint_hard_connection_distance_nm / p2nm)\n",
     "\n",
-    "        # For groups with multiple pairs, we need to find a way to connect all endpoints together.\n",
+    "    # #     path_mask = np.zeros_like(mask, dtype=bool)\n",
+    "    # #     # Set the path to True\n",
+    "    # #     for y, x in path:\n",
+    "    # #         path_mask[y, x] = True\n",
+    "    # #     # Calculate the dilation iterations needed to reach the mean mask width\n",
+    "    # #     dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
+    "    # #     dilated_path_array = ndimage.binary_dilation(\n",
+    "    # #         path_mask,\n",
+    "    # #         iterations=dilation_radius,\n",
+    "    # #     )\n",
     "\n",
-    "        # find the hard-connected endpoints in this group, defined as the endpoints that are connected via the\n",
-    "        # skeleton already, within a configurable hard connection distance.\n",
-    "        endpoint_hard_connection_distance_px = int(endpoint_hard_connection_distance_nm / p2nm)\n",
-    "        # store as a set of frozensets to avoid double counting\n",
-    "        # using sets since the order of the endpoints doesn't matter and we want to avoid duplicates\n",
-    "        endpoint_hard_connections: set[frozenset] = set()\n",
-    "        # Iterate over every endpoint in the group\n",
+    "    # #     # Add the dilated path to the whole mask\n",
+    "    # #     mask = mask | dilated_path_array\n",
     "\n",
+    "    # #     # Update the skeleton to include the path\n",
+    "    # #     for y, x in path:\n",
+    "    # #         skeleton[y, x] = True\n",
     "\n",
-    "    #     path_mask = np.zeros_like(mask, dtype=bool)\n",
-    "    #     # Set the path to True\n",
-    "    #     for y, x in path:\n",
-    "    #         path_mask[y, x] = True\n",
-    "    #     # Calculate the dilation iterations needed to reach the mean mask width\n",
-    "    #     dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
-    "    #     dilated_path_array = ndimage.binary_dilation(\n",
-    "    #         path_mask,\n",
-    "    #         iterations=dilation_radius,\n",
-    "    #     )\n",
-    "\n",
-    "    #     # Add the dilated path to the whole mask\n",
-    "    #     mask = mask | dilated_path_array\n",
-    "\n",
-    "    #     # Update the skeleton to include the path\n",
-    "    #     for y, x in path:\n",
-    "    #         skeleton[y, x] = True\n",
-    "\n",
-    "    # fig, ax = plt.subplots(figsize=(20, 20))\n",
-    "    # plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "    # grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
-    "    # plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
-    "    # skeleton_mask = np.ma.masked_where(~skeleton.astype(bool), skeleton)\n",
-    "    # plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
-    "    # plt.title(\"skeleton after connecting loose ends\")\n",
-    "    # plt.show()"
+    "    # # fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "    # # plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "    # # grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
+    "    # # plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
+    "    # # skeleton_mask = np.ma.masked_where(~skeleton.astype(bool), skeleton)\n",
+    "    # # plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
+    "    # # plt.title(\"skeleton after connecting loose ends\")\n",
+    "    # # plt.show()"
    ]
   }
  ],
